Random fixes
Made sure New Recipe is not visible to everyone
Cleaned code regarding pictures implementation
Removed list style (random dot)

--- a/style.css
+++ b/style.css
@@ -156,6 +156,7 @@ section{
     transition-duration: 0.3s;
     cursor: pointer;
     border-radius: 10px;
+    list-style-type: none;
 }
 .drink-card img {
     max-width: 100%;
@@ -532,6 +533,7 @@ footer .contact .submit button {
     background-color: var(--primary-bg-color);
     border: none;
     cursor: pointer;
+    margin-top: 10px;
 }
 
 footer p {
